Trying to solve hearder bug on mobile class

--- a/src/index.css
+++ b/src/index.css
@@ -209,7 +209,8 @@ span {
     .css-124zb1q {
       display: none;
     }
-    .css-15edxu6-MuiTypography-root {
+    .css-15edxu6-MuiTypography-root,
+    .css-7gz0j2 {
       width: 100%;
       padding: 10px;
       margin-top: 1rem;
